FAQ section added

--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
         </section>
         <!-- Happy Clients Section -->
         <section class="mb-24">
-            <h1 class="font-bold text-5xl mb-16 text-center">Happy <span class="text-orange-400">Clients Says</span></h1>
+            <h1 class="font-bold text-5xl mb-16 text-center">Happy <span class="text-orange-400">Clients Says</span>
+            </h1>
             <!-- Cards -->
             <div class="grid grid-cols-1 md:grid-cols-3 place-items-center gap-16">
                 <!-- Card-1 -->
@@ -281,6 +282,56 @@
                         </div>
                         <h2 class="card-title">Banker</h2>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAQ section -->
+        <section>
+            <h1 class="font-bold text-5xl mb-16 text-center">Frequently Asked <span
+                    class="text-orange-400">Questions</span></h1>
+            <!-- Content -->
+            <div class="card card-side bg-base-100 shadow-xl border px-12">
+                <figure class="w-full">
+                    <img src="images/others/faq.png" alt="question mark" />
+                </figure>
+                <div class="card-body">
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">How do I track my order?</div>
+                        <div class="collapse-content">
+                            <p>Once you place your order, you'll receive a confirmation email with your order number and
+                                any available tracking information. We'll also include dealer contact information for
+                                pickup and delivery items. <br>
+                                Note: Once your item arrives at your selected dealer, they will contact you with
+                                delivery and/or pickup instructions.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What is the return policy?</div>
+                        <div class="collapse-content">
+                            <p>If you're unhappy with your Yamaha-Motor.com items for any reason, we'll gladly accept
+                                your return within 30 days of the shipping date.
+
+                                Returned items must be in original packaging and original condition. This includes all
+                                product tags, instructions, hardware, and accessories. Items must not be damaged due to
+                                wear or installation. We do not accept returns on helmets and Yamalube products.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-200">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">My order status says delivered, but I haven't
+                            received it.</div>
+                        <div class="collapse-content">
+                            <p>1. Verify your shipping address in your order history.</p>
+                            <p>2. Check for an attempted delivery notice. Some of our products require a signature upon
+                                delivery.</p>
+                            <p>3. If you placed an order for delivery, contact your selected dealer. </p>
+                            <p>4. Contact our support team at (800) 962-7926 and we'll do everything we can to assist
+                                you.</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
